# k-shortest-simple-paths

./: CMakeLists.txt  LICENSE  Makefile  README.md  my_digraph.pxd  my_digraph.pyx  setup.py
graphs/: grid5x5.gr  toy.gr  toy2.gr
include/: digraph.h  dijkstra.h  easy_digraph.h  lazy_dijkstra.h  node_classification.h  pairing_heap.h  parsimonious_sidetrack_based.h  sidetrack_based.h  tools.h  yen.h
sagemath/: digraph.pxd  digraph.pyx  dijkstra.pxd  dijkstra.pyx  kssp.pxd  kssp.pyx  pairing_heap.pxd  pairing_heap.pyx  types.pxd  types.pyx
src/: experiments.cpp  main.cpp
